<resources>
    <string name="app_name">Ebikko Scanner</string>
    <string name="username">Username</string>
    <string name="url">URL</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_url">Enter URL</string>
    <string name="password">Password</string>
    <string name="action_favorite">favourite</string>
    <integer name="viewfinder_border_width">6</integer>
    <integer name="viewfinder_border_length">60</integer>

</resources>

