<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"

        android:background="@color/viewfinder_mask"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true">
        <TextView
            android:text="@string/username"
            android:layout_width="match_parent"
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:typeface="sans"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/UrlTextbox"
            android:textStyle="normal|bold"
            android:textColor="@android:color/background_light" />

        <TextView
            android:text="@string/url"
            android:layout_width="match_parent"
            android:id="@+id/textView"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:typeface="sans"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/background_light" />

        <TextView
            android:text="@string/password"
            android:layout_width="match_parent"
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:typeface="sans"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textStyle="normal|bold"
            android:layout_below="@+id/UsernameText"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/background_light" />

        <Button
            android:background="@drawable/buttonshape"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:id="@+id/LoginButton"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:layout_marginTop="23dp"
            android:layout_below="@+id/PasswordText"
            android:layout_centerHorizontal="true"
            style="@android:style/Widget.Holo.Light.Button" />

        <Button
            android:background="@drawable/buttonshape"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:layout_height="wrap_content"
            android:id="@+id/CancelButton"
            android:layout_width="150dp"
            android:textAlignment="center"
            android:layout_marginTop="28dp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/LoginButton"
            android:layout_alignStart="@+id/LoginButton"
            style="@android:style/Widget.Holo.Light.Button" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/UrlTextbox"
            android:hint="@string/enter_url"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/UsernameText"
            android:hint="@string/enter_username"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/PasswordText"
            android:hint="@string/enter_password"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true" />


    </RelativeLayout>
</RelativeLayout>